# cmdkit

./: .gitignore  LICENSE  README.md  cmdkit.spec  install.sh  pyproject.toml
.github/workflows/: release.yml
cmdkit/: __init__.py  install.ps1  main.py  storage.py
hooks/: hook-rich.py
