[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdkit"
version = "0.1.0"
description = "A CLI tool for managing commands"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.0.0",
]

[project.scripts]
cmdkit = "cmdkit.main:app"

[tool.setuptools.packages.find]
where = ["."]
